# actionqueue

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml
.github/workflows/: ci.yml
crates/actionqueue-actor/: Cargo.toml  README.md
crates/actionqueue-actor/src/: department.rs  heartbeat.rs  lib.rs  registry.rs  routing.rs
crates/actionqueue-budget/: Cargo.toml  README.md
crates/actionqueue-budget/src/: gate.rs  lib.rs  tracker.rs
crates/actionqueue-budget/src/subscription/: matcher.rs  mod.rs  registry.rs
crates/actionqueue-cli/: Cargo.toml  README.md
crates/actionqueue-cli/src/: args.rs  lib.rs  main.rs
crates/actionqueue-cli/src/cmd/: daemon.rs  mod.rs  stats.rs  submit.rs
crates/actionqueue-cli/tests/: smoke.rs
crates/actionqueue-core/: Cargo.toml  README.md
crates/actionqueue-core/src/: actor.rs  budget.rs  event.rs  lib.rs  platform.rs  subscription.rs
crates/actionqueue-core/src/ids/: actor_id.rs  attempt_id.rs  department_id.rs  ledger_entry_id.rs  mod.rs  run_id.rs  task_id.rs  tenant_id.rs
crates/actionqueue-core/src/mutation/: mod.rs
crates/actionqueue-core/src/run/: mod.rs  run_instance.rs  state.rs  transitions.rs
crates/actionqueue-core/src/task/: constraints.rs  metadata.rs  mod.rs  run_policy.rs  safety.rs  task_spec.rs
crates/actionqueue-core/src/time/: clock.rs  mod.rs
crates/actionqueue-core/tests/: ids_roundtrip.rs  proptest_state_machine.rs  run_instance_invariants.rs  serde_roundtrip.rs  state_transitions.rs
crates/actionqueue-daemon/: Cargo.toml  README.md
crates/actionqueue-daemon/src/: bootstrap.rs  config.rs  lib.rs
crates/actionqueue-daemon/src/http/: actors.rs  health.rs  metrics.rs  mod.rs  pagination.rs  platform.rs  ready.rs  run_get.rs  runs_list.rs  stats.rs  task_get.rs  tasks_list.rs
crates/actionqueue-daemon/src/http/control/: engine_pause.rs  engine_resume.rs  mod.rs  run_cancel.rs  task_cancel.rs
crates/actionqueue-daemon/src/metrics/: attempts.rs  mod.rs  recovery.rs  registry.rs  runs.rs  wal.rs
crates/actionqueue-daemon/src/time/: clock.rs  mod.rs
crates/actionqueue-daemon/tests/: http_read_api.rs  metrics_parity.rs
crates/actionqueue-engine/: Cargo.toml  README.md
crates/actionqueue-engine/src/: lib.rs
crates/actionqueue-engine/src/concurrency/: key_gate.rs  lifecycle.rs
crates/actionqueue-engine/src/derive/: cron.rs  mod.rs  once.rs  repeat.rs
crates/actionqueue-engine/src/index/: mod.rs  ready.rs  running.rs  scheduled.rs  terminal.rs
crates/actionqueue-engine/src/lease/: acquire.rs  expiry.rs  model.rs
crates/actionqueue-engine/src/scheduler/: attempt_finish.rs  mod.rs  promotion.rs  retry_promotion.rs
crates/actionqueue-engine/src/selection/: default_selector.rs  mod.rs
crates/actionqueue-engine/src/time/: clock.rs  mod.rs
crates/actionqueue-engine/tests/: clock_edge_cases.rs  concurrency_diff_key.rs  concurrency_same_key.rs  derive_once.rs  derive_repeat.rs  derive_repeat_boundaries.rs  lease_exclusive.rs  lease_expiry.rs  proptest_run_accounting.rs  selection_default.rs
crates/actionqueue-executor-local/: Cargo.toml  README.md
crates/actionqueue-executor-local/src/: attempt_runner.rs  backoff.rs  children.rs  handler.rs  identity.rs  lib.rs  pool.rs  retry.rs  timeout.rs  types.rs
crates/actionqueue-executor-local/src/handler/: cancellation.rs
crates/actionqueue-executor-local/tests/: id_propagation.rs  max_attempts.rs  proptest_retry.rs  timeout.rs
crates/actionqueue-platform/: Cargo.toml  README.md
crates/actionqueue-platform/src/: ledger.rs  lib.rs  rbac.rs  tenant.rs
crates/actionqueue-runtime/: Cargo.toml  README.md
crates/actionqueue-runtime/src/: config.rs  dispatch.rs  engine.rs  lib.rs  worker.rs
crates/actionqueue-runtime/tests/: engine_lifecycle.rs
crates/actionqueue-storage/: Cargo.toml  README.md
crates/actionqueue-storage/src/: lib.rs
crates/actionqueue-storage/src/mutation/: authority.rs  mod.rs
crates/actionqueue-storage/src/recovery/: bootstrap.rs  mod.rs  reducer.rs  replay.rs
crates/actionqueue-storage/src/snapshot/: build.rs  loader.rs  mapping.rs  mod.rs  model.rs  writer.rs
crates/actionqueue-storage/src/wal/: codec.rs  event.rs  fs_reader.rs  fs_writer.rs  mod.rs  reader.rs  repair.rs  tail_validation.rs  writer.rs
crates/actionqueue-storage/tests/: mutation_authority.rs  proptest_wal_replay.rs  snapshot_model_parity.rs  wal_partial_record.rs  wal_reader_streaming.rs  wal_replay.rs
crates/actionqueue-workflow/: Cargo.toml  README.md
crates/actionqueue-workflow/src/: children.rs  dag.rs  hierarchy.rs  lib.rs  submission.rs
docs/: acceptance-test-taxonomy.md  actionqueue-charter.md  data-dir-format-v1.0.md  doc-runtime-parity-checklist.md  getting-started.md  guardrails-v1.0.md  invariant-boundaries-v1.0.md  policy-defaults-v1.0.md  wal-recovery-guide.md
docs/examples/: idempotency-runid.md
src/: lib.rs
tests/acceptance/: actor_registration.rs  approval_workflow.rs  attempt_lineage.rs  budget_enforcement.rs  budget_recovery.rs  budget_replenishment.rs  budget_threshold_subscription.rs  budget_threshold_suspension.rs  cancellation.rs  capability_matching.rs  cascading_budget.rs  concurrency_key.rs  concurrent_dispatch_stress.rs  concurrent_mutation_boundary.rs  coordinator_multi_attempt.rs  crash_during_promotion.rs  crash_recovery.rs  cron_scheduling.rs  custom_event_subscription.rs  dag_cycle_rejection.rs  dag_failure_propagation.rs  dag_ordering.rs  dag_snapshot_recovery.rs  department_routing.rs  dispatch_invariants.rs  dynamic_submission.rs  handler_output_roundtrip.rs  hierarchy_lifecycle.rs  lease_expiry.rs  ledger_recovery.rs  misfire.rs  mixed_attempt_outcomes.rs  multi_mutation_session.rs  multi_tenant_isolation.rs  negative_transitions.rs  observability.rs  once_accounting.rs  rbac_enforcement.rs  remote_actor_crash.rs  repeat_accounting.rs  (+9 more)
tests/chaos/: kill_recovery.rs
