[package]
name = "actionqueue-actor"
authors = ["Keith <zed.colonel@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Remote actor registration, heartbeat monitoring, and capability routing for the ActionQueue task queue engine."
readme = "README.md"
repository = "https://github.com/zed-colonel/actionqueue"
keywords = ["actor", "heartbeat", "capability", "task-queue", "routing"]
categories = ["concurrency"]

[dependencies]
actionqueue-core = "0.1.0"
tracing = "0.1"
