[package]
name = "actionqueue-budget"
authors = ["Keith <zed.colonel@gmail.com>"]
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
description = "Budget enforcement, suspend/resume, and event subscriptions for the ActionQueue task queue engine."
readme = "README.md"
repository = "https://github.com/zed-colonel/actionqueue"
keywords = ["budget", "rate-limiting", "subscription", "task-queue", "resource"]
categories = ["concurrency"]

[dependencies]
actionqueue-core = "0.1.2"
tracing = "0.1"
