[package]
name = "actionqueue-cli"
authors = ["Keith <zed.colonel@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Command-line interface for the ActionQueue task queue engine."
readme = "README.md"
repository = "https://github.com/zed-colonel/actionqueue"
keywords = ["cli", "task-queue", "daemon", "command-line"]
categories = ["command-line-utilities"]

[[bin]]
name = "actionqueue-cli"
path = "src/main.rs"

[features]
default = ["serde"]
serde = ["actionqueue-core/serde"]
workflow = ["actionqueue-core/workflow", "actionqueue-engine/workflow"]

[dependencies]
actionqueue-core = { version = "0.1.0", features = ["serde"] }
actionqueue-daemon = { path = "../actionqueue-daemon" }
actionqueue-engine = "0.1.0"
actionqueue-storage = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
