[package]
name = "actionqueue-cli"
authors = ["Keith <zed.colonel@gmail.com>"]
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
description = "Command-line interface for the ActionQueue task queue engine."
readme = "README.md"
repository = "https://github.com/zed-colonel/actionqueue"
keywords = ["cli", "task-queue", "daemon", "command-line"]
categories = ["command-line-utilities"]

[[bin]]
name = "actionqueue-cli"
path = "src/main.rs"

[features]
default = ["serde"]
serde = ["actionqueue-core/serde"]
workflow = ["actionqueue-core/workflow", "actionqueue-engine/workflow"]

[dependencies]
actionqueue-core = { version = "0.1.2", features = ["serde"] }
actionqueue-daemon = "0.1.2"
actionqueue-engine = "0.1.2"
actionqueue-storage = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
