[package]
name = "actionqueue-core"
authors = ["Keith <zed.colonel@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Pure domain types and state machine for the ActionQueue durable task queue engine."
readme = "README.md"
repository = "https://github.com/zed-colonel/actionqueue"
keywords = ["task-queue", "scheduling", "state-machine", "durable", "workflow"]
categories = ["concurrency", "data-structures"]

[dependencies]
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"

[features]
default = []
serde = ["dep:serde", "uuid/serde"]
testing = []
workflow = ["dep:cron", "dep:chrono"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.cron]
version = "0.12"
optional = true

[dependencies.chrono]
version = "0.4"
optional = true
default-features = false

[dev-dependencies]
serde_json = "1.0"
proptest = "1.4"
