[package]
name = "actionqueue-daemon"
authors = ["Keith <zed.colonel@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "HTTP daemon with REST API and Prometheus metrics for the ActionQueue task queue engine."
readme = "README.md"
repository = "https://github.com/zed-colonel/actionqueue"
keywords = ["http", "daemon", "api", "metrics", "task-queue"]
categories = ["web-programming::http-server"]

[dependencies]
actionqueue-core = "0.1.0"
actionqueue-storage = { path = "../actionqueue-storage" }
serde = { version = "1.0", features = ["derive"], optional = true }
axum = "0.7"
serde_json = "1.0"
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
http-body-util = "0.1"
tower = { version = "0.4", features = ["util"] }

[dependencies.actionqueue-actor]
path = "../actionqueue-actor"
optional = true

[dependencies.actionqueue-platform]
path = "../actionqueue-platform"
optional = true

[features]
default = ["serde"]
serde = ["dep:serde"]
workflow = ["actionqueue-core/workflow"]
actor = ["dep:actionqueue-actor"]
platform = ["dep:actionqueue-platform", "actor"]
