[package]
name = "actionqueue-runtime"
authors = ["Keith <zed.colonel@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Async dispatch loop, embedded API, and runtime configuration for the ActionQueue task queue engine."
readme = "README.md"
repository = "https://github.com/zed-colonel/actionqueue"
keywords = ["runtime", "dispatch", "async", "task-queue", "engine"]
categories = ["asynchronous", "concurrency"]

[dependencies]
actionqueue-core = "0.1.0"
actionqueue-storage = { path = "../actionqueue-storage" }
actionqueue-engine = { path = "../actionqueue-engine" }
actionqueue-executor-local = { path = "../actionqueue-executor-local" }
# actionqueue-workflow provides DependencyGate, HierarchyTracker, and SubmissionChannel
# used unconditionally by the dispatch loop. The `workflow` feature gates only
# cron scheduling and related acceptance tests.
actionqueue-workflow = { path = "../actionqueue-workflow" }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3.0"

[dependencies.actionqueue-budget]
path = "../actionqueue-budget"
optional = true

[dependencies.actionqueue-actor]
path = "../actionqueue-actor"
optional = true

[dependencies.actionqueue-platform]
path = "../actionqueue-platform"
optional = true

[features]
default = ["serde"]
serde = ["actionqueue-core/serde"]
workflow = ["actionqueue-engine/workflow"]
budget = ["dep:actionqueue-budget"]
actor = ["dep:actionqueue-actor"]
platform = ["dep:actionqueue-platform", "actor"]
