[package]
name = "actionqueue-storage"
authors = ["Keith <zed.colonel@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "WAL, snapshot, and recovery storage layer for the ActionQueue task queue engine."
readme = "README.md"
repository = "https://github.com/zed-colonel/actionqueue"
keywords = ["wal", "snapshot", "recovery", "persistence", "task-queue"]
categories = ["database-implementations"]

[dependencies]
actionqueue-core = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1", features = ["alloc"] }
crc32fast = "1"
tracing = "0.1"

[dev-dependencies]
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.0"
proptest = "1.4"
actionqueue-engine = "0.1.0"
actionqueue-executor-local = "0.1.0"

[features]
default = ["serde"]
serde = ["actionqueue-core/serde"]
workflow = ["actionqueue-core/workflow"]
