[package]
name = "actionqueue-workflow"
authors = ["Keith <zed.colonel@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Workflow primitives for ActionQueue: DAG dependencies, task hierarchy, cron scheduling, and dynamic submission."
readme = "README.md"
repository = "https://github.com/zed-colonel/actionqueue"
keywords = ["workflow", "dag", "cron", "task-queue", "hierarchy"]
categories = ["concurrency"]

[dependencies]
actionqueue-core = "0.1.0"
actionqueue-storage = "0.1.0"
actionqueue-executor-local = "0.1.0"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"

[dev-dependencies]
actionqueue-runtime = { path = "../actionqueue-runtime" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.0", features = ["v4"] }
